Change color of block which has nav, pages, footer Add semicolon in beautifuljekyll.css

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -196,7 +196,7 @@ img {
 .navbar-custom .navbar-nav .nav-link {
   font-weight: 800;
   /* color: {{ site.navbar-text-col | default: "#404040" }}; */
-  color: #FFF
+  color: #FFF;
 }
 
 .navbar-toggler {
@@ -785,7 +785,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
   background-color: #404040;
   border-radius: 0;
   /* color: {{ site.text-col | default: "#404040" }}; */
-  color: #FFF
+  color: #FFF;
   padding: 0.75rem 1rem;
 }
 @media (min-width: 768px) {
