Wirte a post Remove border of bottom from beautifuljekyll.css

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -453,7 +453,8 @@ footer .footer-custom-content {
 
 .post-preview {
   padding: 1.25rem 0;
-  border-bottom: 1px solid #eee;
+  /* border-bottom: 1px solid #eee; */
+  border-bottom: 0px;
   overflow: hidden;
 }
 
